# duty-roster

./: .gitignore  Cargo.toml  README.md  cargo-deny.toml
.cargo/: audit.toml  deny.toml
.github/workflows/: audit.yml  general.yml  release.yml
src/: config.rs  csv.rs  dates.rs  extra_tasks.rs  gui.rs  lib.rs  main.rs  schedule.rs
src/gui/: app.rs  assignment.rs  config.rs  mod.rs  state.rs  summary.rs  table.rs  table_test.rs  utils.rs
src/schedule/: person_state.rs
test/: config.toml  schedule.toml
