[package]
name = "duty_roster"
version = "0.1.1"
description = "Create a schedule for some people & tasks during a given range of dates"
authors = ["Sebastian Detert <rust-crates@elygor.de>"]
edition = "2024"
license = "Apache-2.0"
repository  = "https://github.com/Thomblin/duty-roster"
readme = "README.md"
keywords = ["csv", "schedule"]
categories = ["command-line-utilities", "config"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = {version="4.5.54", features = ["derive"]}
csv = "1.4.0"
iced = { version = "0.12.1", features = ["tokio", "debug"] }
rand = "0.9.2"
serde = {version="1.0.228", features = ["derive"]}
serde_with = {version="3.16.1", features = ["chrono"]}
toml = "0.9.8"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "fs", "macros", "time"] }

[dev-dependencies]
tempfile = "3.24.0"

