[package]
name = "duty_roster"
version = "0.2.2"
description = "Create a schedule for some people & tasks during a given range of dates"
authors = ["Sebastian Detert <rust-crates@elygor.de>"]
edition = "2024"
license = "Apache-2.0"
repository  = "https://github.com/Thomblin/duty-roster"
readme = "README.md"
keywords = ["csv", "schedule"]
categories = ["command-line-utilities", "config"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = {version="4.5.60", features = ["derive"]}
csv = "1.4.0"
iced = { version = "0.14.0", features = ["tokio", "debug"] }
rand = "0.10.0"
serde = {version="1.0.228", features = ["derive"]}
serde_with = {version="3.17.0", features = ["chrono"]}
toml = "1.0.6"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "fs", "macros", "time"] }

[dev-dependencies]
tempfile = "3.26.0"

