[package]
name = "duty_roster"
version = "0.2.2"
description = "Create a schedule for some people & tasks during a given range of dates"
authors = ["Sebastian Detert <rust-crates@elygor.de>"]
edition = "2024"
license = "Apache-2.0"
repository  = "https://github.com/Thomblin/duty-roster"
readme = "README.md"
keywords = ["csv", "schedule"]
categories = ["command-line-utilities", "config"]

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
clap = {version="4.6.1", features = ["derive"]}
csv = "1.4.0"
iced = { version = "0.14.0", features = ["tokio", "debug"] }
rand = "0.10.2"
serde = {version="1.0.228", features = ["derive"]}
serde_with = {version="3.21.0", features = ["chrono"]}
toml = "1.1.2"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "fs", "macros", "time"] }

[dev-dependencies]
tempfile = "3.27.0"

